@@ -72,6 +72,7 @@ export(read.codeml_mlc)
 export(read.hyphy)
 export(read.jplace)
 export(read.paml_rst)
+export(read.r8s)
 export(read.raxml)
 export(read.tree)
 export(reroot)
@@ -91,6 +92,7 @@ exportClasses(codeml_mlc)
 exportClasses(hyphy)
 exportClasses(jplace)
 exportClasses(paml_rst)
+exportClasses(r8s)
 exportClasses(raxml)
 exportMethods(get.fields)
 exportMethods(get.placements)
@@ -156,6 +158,7 @@ importFrom(ggplot2,scale_fill_discrete)
 importFrom(ggplot2,scale_fill_gradient)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_x_date)
 importFrom(ggplot2,scale_x_reverse)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
