@@ -1,0 +1,21 @@
+% Generated by roxygen2 (4.1.1): do not edit by hand
+% Please edit documentation in R/r8s.R
+\name{read.r8s}
+\alias{read.r8s}
+\title{read.r8s}
+\usage{
+read.r8s(file)
+}
+\arguments{
+\item{file}{r8s output log file}
+}
+\value{
+r8s instance
+}
+\description{
+parse output from r8s
+}
+\author{
+Guangchuang Yu
+}
+
