@@ -1,9 +1,14 @@
 CHANGES IN VERSION 1.1.20
 ------------------------
+ o defined r8s class, see http://loco.biosci.arizona.edu/r8s/  <2015-09-02, Wed>
+   + add r8s sample files
+   + read.r8s, parser function
+ o bug fixed in fortify.multiPhylo, convert df$.id to factor of levels=names(multiPhylo_object) <2015-09-02, Wed>   
  o update scale_x_ggtree to support Date as x-axis <2015-09-01, Tue>
  o add mrsd parameter for user to specify 'most recent sampling date' for time tree <2015-09-01, Tue>
    - remove 'time_scale' parameter.
  o defined 'raxml' class for RAxML bootstrapping analysis result <2015-09-01, Tue>
+   + see http://sco.h-its.org/exelixis/web/software/raxml/hands_on.html
    + read.raxml, parser function
    + plot, get.tree, get.fields, groupOTU, groupClade, scale_color, gzoom, and show methods
    + fortify.raxml method
